--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,7 @@ celerybeat.pid
 .venv
 env/
 venv/
+venv_para/
 ENV/
 env.bak/
 venv.bak/
@@ -131,3 +132,10 @@ dmypy.json
 
 # LSF files
 lsf.*
+
+# Datasets
+paraphrase/MSRParaphraseCorpus
+paraphrase/multinli_1.0
+
+# .csv files
+*.csv
