Configure depandabot to main directly

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,4 @@ updates:
     directory: "paraphrase/" # Location of package manifests
     schedule:
       interval: "daily"
+    target-branch: "main"
