memsum submodule added

--- a/.gitignore
+++ b/.gitignore
@@ -153,4 +153,6 @@ paraphrase/saved_models
 paraphrase/test_corpora
 
 # Memsum (don't track in this repo)
-Memsum
+Memsum/src
+Memsum/model
+Memsum/data
