--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "MemSumExtractor"]
 	path = MemSumExtractor
-	url = https://github.com/Siddhant-Ray/MemSum
+	url = git@github.com:Siddhant-Ray/MemSum.git
