--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "MemSumExtractor"]
-	path = MemSumExtractor
+[submodule "MemSum"]
+	path = MemSum
 	url = git@github.com:Siddhant-Ray/MemSum.git
