--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "MemSum"]
 	path = MemSum
 	url = git@github.com:Siddhant-Ray/MemSum.git
+
+[submodule "MeatNarratives"]
+	path = MeatNarratives
+	url = git@github.com:Siddhant-Ray/LawEcon-MeatNarratives-Project.git
