--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -15,3 +15,15 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+  quality_review:
+    runs-on: ubuntu-latest   
+    steps:
+     - uses: actions/checkout@v2  
+     - name: Python Linter
+       uses: sunnysid3up/python-linter@master
+       with:
+         source: "src"
+         mypy-options: "--ignore-missing-imports --show-error-codes"
+         pylint-options: "--rcfile=setup.cfg"
+         isort-options: "-w 100"
+         django: false
