--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -22,7 +22,7 @@ jobs:
      - name: Python Linter
        uses: sunnysid3up/python-linter@master
        with:
-         source: "src"
+         source: "simplification_clustering"
          mypy-options: "--ignore-missing-imports --show-error-codes"
          pylint-options: "--rcfile=setup.cfg"
          isort-options: "-w 100"
