--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -1,29 +1,24 @@
-name: GitHub Actions Demo
-on: [push]
+name: Code Quality
+on:
+  push:
+    paths:
+      - "**.py"
+
 jobs:
-  Explore-GitHub-Actions:
+  lint:
+    name: Python Lint
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
-  quality_review:
-    runs-on: ubuntu-latest   
-    steps:
-     - uses: actions/checkout@v2  
-     - name: Python Linter
-       uses: sunnysid3up/python-linter@master
-       with:
-         source: "simplification_clustering"
-         mypy-options: "--ignore-missing-imports --show-error-codes"
-         pylint-options: "--rcfile=setup.cfg"
-         isort-options: "-w 100"
-         django: false
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+      - name: Run flake8
+        uses: julianwachholz/flake8-action@v2
+        with:
+          checkName: "Python Lint"
+          path: path/to/files
+          plugins: flake8-spellcheck
+          config: path/to/flake8.ini
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
