don't track .out files

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,6 @@ labour_contracts/data/
 # Clustering 
 simplification_clustering/Datasets
 simplification_clustering/output_data
+
+# Annots
+annots/*.out
