--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,17 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
-    -   id: check-yaml
-    -   id: trailing-whitespace
-    -   id: debug-statements
-    -   id: name-tests-test
-    -   id: requirements-txt-fixer
--   repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: ''  # Use the sha / tag you want to point at
+      - id: check-yaml
+      - id: trailing-whitespace
+      - id: debug-statements
+      - id: name-tests-test
+      - id: requirements-txt-fixer
+  - repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: "" # Use the sha / tag you want to point at
     hooks:
-    -   id: autopep8
+      - id: autopep8
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "" # Use the sha / tag you want to point at
+    hooks:
+      - id: prettier
